k8s/pgadmin/04_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/lib/pgadmin
              name: pgadmin-storage
            - mountPath: /pgadmin4/config_local.py
              name: pgadmin-config
              subPath: config_local.py
          securityContext:
            runAsUser: 0
      volumes:
        - name: pgadmin-storage
          persistentVolumeClaim:
            claimName: pgadmin-pvc
        - name: pgadmin-config
          secret:
            secretName: pgadmin-config
