k8s/pgadmin/05_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: pgadmin
spec:
  selector:
    app: pgadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
