k8s/pgadmin/06_ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin
  namespace: pgadmin
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`pgadmin.keindev.ru`)
      priority: 10
      services:
        - name: pgadmin-service
          namespace: pgadmin
          port: 80
  tls:
    secretName: local-keindev-ru-tls
